--- a/puzzle.html
+++ b/puzzle.html
@@ -103,13 +103,12 @@
       <div id="smallline">
 
 <!-- 구분 -->
-        <div class="gline"> 인기게임 </div>
+        <div class="gline"> 액션게임 </div>
 <!-- 구분 닫기 -->
 
         <table border="1" class="tabler">
           <tr>
-            <td width="260px"><a href="file/action/dadandkid.html">
-              <img width="250px" src="file/action/pic/dadandkid.png"/></a>아빠와나</td>
+            <td>asd</td>
             <td>zxc</td>
             <td>zxc</td>
           </tr>
