--- a/puzzle.html
+++ b/puzzle.html
@@ -108,10 +108,9 @@
 
         <table border="1" class="tabler">
           <tr>
-            <td width="260px"><a href="file/action/dadandkid.html">
-              <img width="250px" src="file/action/pic/dadandkid.png"/></a>아빠와나</td>
-            <td width="260px">zxc</td>
-            <td width="260px">zxc</td>
+            <td>asd</td>
+            <td>zxc</td>
+            <td>zxc</td>
           </tr>
         </table>
 
