--- a/file/action/dadandkid.html
+++ b/file/action/dadandkid.html
@@ -6,6 +6,17 @@
       게임저장소
     </title>
 
+    <!-- 방문자 분석기 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141674754-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-141674754-1');
+    </script>
+    <!-- 방문자 분석기 닫기-->
+
         <style>
 
             {
@@ -62,11 +73,6 @@
               background: #2E9AFE;
               color: white;
               font-size: 25px;
-              text-align: center;
-            }
-            .tabler{
-              width: 780px;
-              margin : 10px;
               text-align: center;
             }
             .tables{
