--- a/file/action/boxhead.html
+++ b/file/action/boxhead.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      아빠와나 게임하기 조작법 및 기술콤보
+      박스헤드 게임하기
     </title>
 
     <!-- 방문자 분석기 -->
@@ -114,52 +114,36 @@
       <div id="smallline">
 
 <!-- 구분 -->
-        <div class="gline"> 아빠와나 게임하기 조작법 및 기술콤보 </div>
+        <div class="gline"> 박스헤드 게임하기 </div>
 <!-- 구분 닫기 -->
 
 <!-- 게임 -->
         <br>
-        <EMBED type=application/x-shockwave-flash pluginspage=http://www.macromedia.com/go/getflashplayer
-        height=530 width=700 src=game/dadandkid.swf
-        wmode="transparent" allowscriptaccess="always" quality="high">
+<embed src="game/boxhead.swf" quality="high" width="728" height="480" name="gamefile" align="middle" wmode="window" allowfullscreen="false" type="application/x-shockwave-flash" pluginspage="http://www.adobe.com/go/getflashplayer">
         <br><br>
 <!-- 게임 닫기 -->
 
 <!-- 조작법-->
-       <div class="gline"> 조작법 및 기술콤보 </div>
+       <div class="gline"> 조작법 </div>
           <table class="tables" border="1px">
              <tr>
-               <td width="150px">이동</td>
+               <td width="150px">1p</td>
                <td width="360px">
-                 → : 좌로 이동 <br>
-                 ← : 우로 이동 <br>
-                 ↑ : 위로 이동 <br>
-                 ↓ : 아래로 이동
+                 WASD - 이동 <br>
+                 Q - 이전 무기 선택<br>
+                 E - 다음 무기 선택<br>
+                 스페이스바 - 공격
               </td>
              </tr>
              <tr>
-              <td>공격</td>
+              <td>2p</td>
               <td>
-                A : 작은 공격 <br>
-                S : 큰 공격
+                ← ↑ ↓ → - 이동 <br>
+                < - 이전 무기 선택<br>
+                > - 다음 무기 선택<br>
+                / - 공격
               </td>
-             <tr>
-               <td>콤보</td>
-               <td>
-                 A+A+A+S : 기본 <br>
-                 A+A+S+S : 기본 <br>
-                 A+S+S+S : 기본 <br>
-                 S+S+A+S : 기본 <br>
-                 A+A+A+S+S : 콤보 <br>
-                 A+S : 칼 <br>
-                 A+S+A : 칼 <br>
-                 ↑ +A+S : 위로 던져서 공격 <br>
-                 → → +A : 달려가서 공중에서 덮어쓰기 <br>
-                 → → +S연타 : 무한 팔돌리기 공격 <br>
-                 A+A+A+A+S+S+S : 7연타 공격 <br>
-                 적 혹은 농구공을 잡은 상태 ↑ +S : 위로 던지기
-               </td>
-             </tr>
+
           </table> <br>
 <!-- 조작법 닫기 -->
 
