--- a/action.html
+++ b/action.html
@@ -121,10 +121,18 @@
 
         <table border="1" class="tabler">
           <tr>
-            <td width="260px"><a href="file/action/dadandkid.html">
-              <img width="250px" src="file/action/pic/dadandkid.png"/></a>아빠와나</td>
-            <td width="260px">zxc</td>
-            <td width="260px">zxc</td>
+            <td width="260px">
+              <a href="file/action/dadandkid.html">
+              <img width="250px" src="file/action/pic/dadandkid.png"/></a><br>아빠와나
+            </td>
+            <td>
+              <a href="file/action/boxhead.html">
+              <img width="250px" src="file/action/pic/boxhead.gif"/></a><br>박스헤드
+            </td>
+            <td>
+              <a href="file/action/gogunbuntoo.html">
+              <img width="250px" src="file/action/pic/gogunbuntoo.jpg"/></a><br>고군분투
+            </td>
           </tr>
         </table>
 
