--- a/file/action/boxhead.html
+++ b/file/action/boxhead.html
@@ -6,6 +6,16 @@
       박스헤드 게임하기
     </title>
 
+    <!-- 애드센스 -->
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+             (adsbygoogle = window.adsbygoogle || []).push({
+                  google_ad_client: "ca-pub-5417921263893401",
+                  enable_page_level_ads: true
+             });
+        </script>
+    <!-- 애드센스 닫기 -->
+
     <!-- 방문자 분석기 -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141674754-1"></script>
     <script>
@@ -88,6 +98,33 @@
 
 <!--BBBBBBBBBBBBBBBBBBBBBBOOOOOOOOOOOOOOOOOOOOOODDDDDDDDDDDDDDDDDYYYYYYYYYYYYYYY-->
   <body>
+
+    <!-- 보안 -->
+        <script language="JavaScript">
+        function click() {
+        if ((event.button==2) || (event.button==3)) {
+        alert('보안상 마우스 오른쪽 버튼은 사용할수 없습니다.');
+        }
+        }
+        document.onmousedown=click
+
+        </script>
+        <script language="JavaScript">
+        <!-- Hide from old browsers
+        if (navigator.appName == "Netscape") {
+        document.captureEvents(Event.MOUSEDOWN)
+        document.onmousedown = checkClick
+
+        function checkClick(ev) {
+                if (ev.which != 1) {
+                        alert('보안상 마우스 오른쪽 버튼은 사용할수 없습니다.')
+                        return false
+                }
+        }
+        }
+        </script>
+    <!-- 보안 닫기 -->
+
     <center>
       <header border="1">
         <h1>게임저장소</h1>
