--- a/horror.html
+++ b/horror.html
@@ -6,6 +6,16 @@
       게임저장소
     </title>
 
+    <!-- 애드센스 -->
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+             (adsbygoogle = window.adsbygoogle || []).push({
+                  google_ad_client: "ca-pub-5417921263893401",
+                  enable_page_level_ads: true
+             });
+        </script>
+    <!-- 애드센스 닫기 -->
+
         <!-- 방문자 분석기 -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141674754-1"></script>
         <script>
@@ -17,7 +27,7 @@
         </script>
         <!-- 방문자 분석기 닫기-->
 
-        <style>
+        <style type="text/css">
 
             {
                 box-sizing:border-box;
@@ -90,6 +100,34 @@
 
 <!--BBBBBBBBBBBBBBBBBBBBBBOOOOOOOOOOOOOOOOOOOOOODDDDDDDDDDDDDDDDDYYYYYYYYYYYYYYY-->
   <body>
+
+
+    <!-- 보안 -->
+        <script language="JavaScript">
+        function click() {
+        if ((event.button==2) || (event.button==3)) {
+        alert('보안상 마우스 오른쪽 버튼은 사용할수 없습니다.');
+        }
+        }
+        document.onmousedown=click
+
+        </script>
+        <script language="JavaScript">
+        <!-- Hide from old browsers
+        if (navigator.appName == "Netscape") {
+        document.captureEvents(Event.MOUSEDOWN)
+        document.onmousedown = checkClick
+
+        function checkClick(ev) {
+                if (ev.which != 1) {
+                        alert('보안상 마우스 오른쪽 버튼은 사용할수 없습니다.')
+                        return false
+                }
+        }
+        }
+        </script>
+    <!-- 보안 닫기 -->
+
     <center>
       <header border="1">
         <h1>게임저장소</h1>
@@ -116,14 +154,23 @@
       <div id="smallline">
 
 <!-- 구분 -->
-        <div class="gline"> 액션게임 </div>
+        <div class="gline"> 슈팅게임 </div>
 <!-- 구분 닫기 -->
 
         <table border="1" class="tabler">
           <tr>
-            <td>asd</td>
-            <td>zxc</td>
-            <td>zxc</td>
+            <td width="260px">
+              <a href="file/shooting/invading.html">
+              <img width="250px" src="file/shooting/pic/invading.png"/></a><br>북한침입
+            </td>
+            <td>
+              <a href="file/shooting/kingdombow.html">
+              <img width="250px" src="file/shooting/pic/kingdombow.png"/></a><br>왕국의 활
+            </td>
+            <td>
+              <a href="file/shooting/zolamangun.html">
+              <img width="250px" src="file/shooting/pic/zolamangun.png"/></a><br>졸라맨 총
+            </td>
           </tr>
         </table>
 
