--- a/action.html
+++ b/action.html
@@ -162,11 +162,11 @@
               <a href="file/action/dadandkid.html">
               <img width="250px" src="file/action/pic/dadandkid.png"/></a><br>아빠와나
             </td>
-            <td>
-              <a href="file/action/boxhead.html">
-              <img width="250px" src="file/action/pic/boxhead.gif"/></a><br>박스헤드
+            <td width="260px">
+              <a href="file/action/streetfighter2.html">
+              <img width="250px" src="file/action/pic/streetfighter2.png"/></a><br>스트리트파이터2
             </td>
-            <td>
+            <td width="260px">
               <a href="file/action/gogunbuntoo.html">
               <img width="250px" src="file/action/pic/gogunbuntoo.jpg"/></a><br>고군분투
             </td>
