--- a/defense.html
+++ b/defense.html
@@ -154,22 +154,22 @@
       <div id="smallline">
 
 <!-- 구분 -->
-        <div class="gline"> 슈팅게임 </div>
+        <div class="gline"> 디펜스게임 </div>
 <!-- 구분 닫기 -->
 
         <table border="1" class="tabler">
           <tr>
             <td width="260px">
-              <a href="file/shooting/invading.html">
-              <img width="250px" src="file/shooting/pic/invading.png"/></a><br>북한침입
+              <a href="file/defense/boxhead.html">
+              <img width="250px" src="file/defense/pic/boxhead.gif"/></a><br>박스헤드
             </td>
-            <td>
-              <a href="file/shooting/kingdombow.html">
-              <img width="250px" src="file/shooting/pic/kingdombow.png"/></a><br>왕국의 활
+            <td width="260px">
+              <a href="file/defense/ageofwar1.html">
+              <img width="250px" src="file/defense/pic/ageofwar1.png"/></a><br>전쟁시대1
             </td>
-            <td>
-              <a href="file/shooting/zolamangun.html">
-              <img width="250px" src="file/shooting/pic/zolamangun.png"/></a><br>졸라맨 총
+            <td width="260px">
+              <a href="file/defense/ageofwar2.html">
+              <img width="250px" src="file/defense/pic/ageofwar2.png"/></a><br>전쟁시대2
             </td>
           </tr>
         </table>
