--- a/file/shooting/kingdombow.html
+++ b/file/shooting/kingdombow.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      북한침입 게임하기
+      왕국의 활 게임하기
     </title>
 
     <!-- 애드센스 -->
@@ -151,7 +151,7 @@
       <div id="smallline">
 
 <!-- 구분 -->
-        <div class="gline"> 북한침입 게임하기 </div>
+        <div class="gline"> 왕국의 활 게임하기 </div>
 <!-- 구분 닫기 -->
 
 <!-- 게임 -->
