--- a/sports.html
+++ b/sports.html
@@ -154,7 +154,7 @@
       <div id="smallline">
 
 <!-- 구분 -->
-        <div class="gline"> 슈팅게임 </div>
+        <div class="gline"> 스포츠게임 </div>
 <!-- 구분 닫기 -->
 
         <table border="1" class="tabler">
@@ -163,11 +163,11 @@
               <a href="file/shooting/invading.html">
               <img width="250px" src="file/shooting/pic/invading.png"/></a><br>북한침입
             </td>
-            <td>
+            <td width="260px">
               <a href="file/shooting/kingdombow.html">
               <img width="250px" src="file/shooting/pic/kingdombow.png"/></a><br>왕국의 활
             </td>
-            <td>
+            <td width="260px">
               <a href="file/shooting/zolamangun.html">
               <img width="250px" src="file/shooting/pic/zolamangun.png"/></a><br>졸라맨 총
             </td>
