--- a/index.html
+++ b/index.html
@@ -162,11 +162,10 @@
               <a href="file/action/dadandkid.html">
               <img width="250px" src="file/action/pic/dadandkid.png"/></a><br>아빠와나
             </td>
-            <td>
-              <a href="file/action/boxhead.html">
-              <img width="250px" src="file/action/pic/boxhead.gif"/></a><br>박스헤드
-            </td>
-            <td>
+            <td width="260px">
+              <a href="file/defense/boxhead.html">
+              <img width="250px" src="file/defense/pic/boxhead.gif"/></a><br>박스헤드
+            <td width="260px">
               <a href="file/action/gogunbuntoo.html">
               <img width="250px" src="file/action/pic/gogunbuntoo.jpg"/></a><br>고군분투
             </td>
