--- a/file/defense/ageofwar2.html
+++ b/file/defense/ageofwar2.html
@@ -133,19 +133,19 @@
     <div id="largeline">
 
 
-<!-- 상단 메뉴바 -->
-      <ul class="nav-container">
-        <li class="nav-item"> <a href="../../index.html">Home</a></li>
-        <li class="nav-item"> <a href="../../action.html">액션</a></li>
-        <li class="nav-item"> <a href="../../shooting.html">슈팅</a></li>
-        <li class="nav-item"> <a href="../../defense.html">디펜스</a></li>
-        <li class="nav-item"> <a href="../../horror.html">퍼즐</a></li>
-        <li class="nav-item"> <a href="../../puzzle.html">공포</a></li>
-        <li class="nav-item"> <a href="../../sports.html">스포츠</a></li>
-        <li class="nav-item"> <a href="../../racing.html">레이싱</a></li>
-        <li class="nav-item"> <a href="../../rpg.html">RPG</a></li>
-      </ul>
-<!-- 상단 메뉴바 닫기 -->
+      <!-- 상단 메뉴바 -->
+            <ul class="nav-container">
+              <li class="nav-item"> <a href="../../index.html">Home</a></li>
+              <li class="nav-item"> <a href="../../action.html">액션</a></li>
+              <li class="nav-item"> <a href="../../shooting.html">슈팅</a></li>
+              <li class="nav-item"> <a href="../../defense.html">디펜스</a></li>
+              <li class="nav-item"> <a href="../../puzzle.html">퍼즐</a></li>
+              <li class="nav-item"> <a href="../../horror.html">공포</a></li>
+              <li class="nav-item"> <a href="../../sports.html">스포츠</a></li>
+              <li class="nav-item"> <a href="../../racing.html">레이싱</a></li>
+              <li class="nav-item"> <a href="../../rpg.html">RPG</a></li>
+            </ul>
+      <!-- 상단 메뉴바 닫기 -->
 
 <!-- 작은선 -->
       <div id="smallline">
