--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
         <li class="nav-item"> <a href="action.html">액션</a></li>
         <li class="nav-item"> <a href="shooting.html">슈팅</a></li>
         <li class="nav-item"> <a href="defense.html">디펜스</a></li>
-        <li class="nav-item"> <a href="horror.html">퍼즐</a></li>
-        <li class="nav-item"> <a href="puzzle.html">공포</a></li>
+        <li class="nav-item"> <a href="puzzle.html">퍼즐</a></li>
+        <li class="nav-item"> <a href="horror.html">공포</a></li>
         <li class="nav-item"> <a href="sports.html">스포츠</a></li>
         <li class="nav-item"> <a href="racing.html">레이싱</a></li>
         <li class="nav-item"> <a href="rpg.html">RPG</a></li>
