--- a/puzzle.html
+++ b/puzzle.html
@@ -136,19 +136,19 @@
     <div id="largeline">
 
 
-<!-- 상단 메뉴바 -->
-      <ul class="nav-container">
-        <li class="nav-item"> <a href="index.html">Home</a></li>
-        <li class="nav-item"> <a href="action.html">액션</a></li>
-        <li class="nav-item"> <a href="shooting.html">슈팅</a></li>
-        <li class="nav-item"> <a href="defense.html">디펜스</a></li>
-        <li class="nav-item"> <a href="horror.html">퍼즐</a></li>
-        <li class="nav-item"> <a href="puzzle.html">공포</a></li>
-        <li class="nav-item"> <a href="sports.html">스포츠</a></li>
-        <li class="nav-item"> <a href="racing.html">레이싱</a></li>
-        <li class="nav-item"> <a href="rpg.html">RPG</a></li>
-      </ul>
-<!-- 상단 메뉴바 닫기 -->
+      <!-- 상단 메뉴바 -->
+            <ul class="nav-container">
+              <li class="nav-item"> <a href="index.html">Home</a></li>
+              <li class="nav-item"> <a href="action.html">액션</a></li>
+              <li class="nav-item"> <a href="shooting.html">슈팅</a></li>
+              <li class="nav-item"> <a href="defense.html">디펜스</a></li>
+              <li class="nav-item"> <a href="puzzle.html">퍼즐</a></li>
+              <li class="nav-item"> <a href="horror.html">공포</a></li>
+              <li class="nav-item"> <a href="sports.html">스포츠</a></li>
+              <li class="nav-item"> <a href="racing.html">레이싱</a></li>
+              <li class="nav-item"> <a href="rpg.html">RPG</a></li>
+            </ul>
+      <!-- 상단 메뉴바 닫기 -->
 
 <!-- 작은선 -->
       <div id="smallline">
@@ -160,16 +160,16 @@
         <table border="1" class="tabler">
           <tr>
             <td width="260px">
-              <a href="file/shooting/invading.html">
-              <img width="250px" src="file/shooting/pic/invading.png"/></a><br>북한침입
+              <a href="file/puzzle/angrybirdwallbroken.html">
+              <img width="250px" src="file/puzzle/pic/angrybirdwallbroken.png"/></a><br>앵그리버드
             </td>
             <td width="260px">
-              <a href="file/shooting/kingdombow.html">
-              <img width="250px" src="file/shooting/pic/kingdombow.png"/></a><br>왕국의 활
+              <a href="file/puzzle/dragonquest.html">
+              <img width="250px" src="file/puzzle/pic/dragonquest.png"/></a><br>드레곤퀘스트
             </td>
             <td width="260px">
-              <a href="file/shooting/zolamangun.html">
-              <img width="250px" src="file/shooting/pic/zolamangun.png"/></a><br>졸라맨 총
+              <a href="file/puzzle/sudoku.html">
+              <img width="250px" src="file/puzzle/pic/sudoku.png"/></a><br>스도쿠 퍼즐
             </td>
           </tr>
         </table>
