--- a/horror.html
+++ b/horror.html
@@ -160,16 +160,16 @@
         <table border="1" class="tabler">
           <tr>
             <td width="260px">
-              <a href="file/shooting/invading.html">
-              <img width="250px" src="file/shooting/pic/invading.png"/></a><br>북한침입
+              <a href="file/horror/aooni.html">
+              <img width="250px" src="file/horror/pic/aooni.png"/></a><br>아오오니
             </td>
             <td width="260px">
-              <a href="file/shooting/kingdombow.html">
-              <img width="250px" src="file/shooting/pic/kingdombow.png"/></a><br>왕국의 활
+              <a href="file/horror/dontwhackyourteacher.html">
+              <img width="250px" src="file/horror/pic/dontwhackyourteacher.png"/></a><br>선생님을 괴롭히지 마라
             </td>
             <td width="260px">
-              <a href="file/shooting/zolamangun.html">
-              <img width="250px" src="file/shooting/pic/zolamangun.png"/></a><br>졸라맨 총
+              <a href="file/horror/amateursurgeon2.html">
+              <img width="250px" src="file/horror/pic/amateursurgeon2.png"/></a><br>아마추어 외과의사
             </td>
           </tr>
         </table>
