--- a/racing.html
+++ b/racing.html
@@ -160,16 +160,16 @@
         <table border="1" class="tabler">
           <tr>
             <td width="260px">
-              <a href="file/shooting/invading.html">
-              <img width="250px" src="file/shooting/pic/invading.png"/></a><br>북한침입
+              <a href="file/racing/jetvelocity3d.html">
+              <img width="250px" src="file/racing/pic/jetvelocity3d.png"/></a><br>3D 레이싱
             </td>
             <td width="260px">
-              <a href="file/shooting/kingdombow.html">
-              <img width="250px" src="file/shooting/pic/kingdombow.png"/></a><br>왕국의 활
+              <a href="file/racing/scuntbikedeluxe.html">
+              <img width="250px" src="file/racing/pic/scuntbikedeluxe.png"/></a><br>오토바이
             </td>
             <td width="260px">
-              <a href="file/shooting/zolamangun.html">
-              <img width="250px" src="file/shooting/pic/zolamangun.png"/></a><br>졸라맨 총
+              <a href="file/racing/tanktruckdriver.html">
+              <img width="250px" src="file/racing/pic/tanktruckdriver.png"/></a><br>트럭운전
             </td>
           </tr>
         </table>
