--- a/rpg.html
+++ b/rpg.html
@@ -160,16 +160,16 @@
         <table border="1" class="tabler">
           <tr>
             <td width="260px">
-              <a href="file/shooting/invading.html">
-              <img width="250px" src="file/shooting/pic/invading.png"/></a><br>북한침입
+              <a href="file/rpg/mineworkermankung.html">
+              <img width="250px" src="file/rpg/pic/mineworkermankung.png"/></a><br>굴착소년쿵
             </td>
             <td width="260px">
-              <a href="file/shooting/kingdombow.html">
-              <img width="250px" src="file/shooting/pic/kingdombow.png"/></a><br>왕국의 활
+              <a href="file/rpg/swordreinforce.html">
+              <img width="250px" src="file/rpg/pic/swordreinforce.png"/></a><br>검 강화하기
             </td>
             <td width="260px">
-              <a href="file/shooting/zolamangun.html">
-              <img width="250px" src="file/shooting/pic/zolamangun.png"/></a><br>졸라맨 총
+              <a href="file/rpg/thelegendofgockgange.html">
+              <img width="250px" src="file/rpg/pic/thelegendofgockgange.png"/></a><br>더 레전드 오브 곡괭이
             </td>
           </tr>
         </table>
