--- a/sports.html
+++ b/sports.html
@@ -160,16 +160,16 @@
         <table border="1" class="tabler">
           <tr>
             <td width="260px">
-              <a href="file/shooting/invading.html">
-              <img width="250px" src="file/shooting/pic/invading.png"/></a><br>북한침입
+              <a href="file/sports/stickfigurebadminton.html">
+              <img width="250px" src="file/sports/pic/stickfigurebadminton.png"/></a><br>스틱맨 배드민턴 2인용
             </td>
             <td width="260px">
-              <a href="file/shooting/kingdombow.html">
-              <img width="250px" src="file/shooting/pic/kingdombow.png"/></a><br>왕국의 활
+              <a href="file/sports/realsoccer.html">
+              <img width="250px" src="file/sports/pic/realsoccer.png"/></a><br>리얼싸커
             </td>
             <td width="260px">
-              <a href="file/shooting/zolamangun.html">
-              <img width="250px" src="file/shooting/pic/zolamangun.png"/></a><br>졸라맨 총
+              <a href="file/sports/hoopsmania.html">
+              <img width="250px" src="file/sports/pic/hoopsmania.png"/></a><br>농구 자유투
             </td>
           </tr>
         </table>
