--- a/index.html
+++ b/index.html
@@ -170,6 +170,34 @@
               <img width="250px" src="file/action/pic/gogunbuntoo.jpg"/></a><br>고군분투
             </td>
           </tr>
+          <tr>
+            <td width="260px">
+              <a href="file/rpg/mineworkermankung.html">
+              <img width="250px" src="file/rpg/pic/mineworkermankung.png"/></a><br>굴착소년쿵
+            </td>
+            <td width="260px">
+              <a href="file/rpg/koreawar.html">
+              <img width="250px" src="file/rpg/pic/koreawar.png"/></a><br>한국전쟁
+            </td>
+            <td width="260px">
+              <a href="file/defense/ageofwar1.html">
+              <img width="250px" src="file/defense/pic/ageofwar1.png"/></a><br>전쟁시대1
+            </td>
+          </tr>
+          <tr>
+            <td width="260px">
+              <a href="file/defense/ageofwar2.html">
+              <img width="250px" src="file/defense/pic/ageofwar2.png"/></a><br>전쟁시대2
+            </td>
+            <td width="260px">
+              <a href="file/rpg/swordreinforce.html">
+              <img width="250px" src="file/rpg/pic/swordreinforce.png"/></a><br>검 강화하기
+            </td>
+            <td width="260px">
+              <a href="file/rpg/newyearsbowwar.html">
+              <img width="250px" src="file/rpg/pic/newyearsbowwar.png"/></a><br>세배전쟁
+            </td>
+          </tr>
         </table>
 
       </div>
