--- a/file/puzzle/growrpg.html
+++ b/file/puzzle/growrpg.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      게임저장소
+      그로우RPG 게임하기
     </title>
 
     <!-- 애드센스 -->
@@ -16,18 +16,18 @@
         </script>
     <!-- 애드센스 닫기 -->
 
-        <!-- 방문자 분석기 -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141674754-1"></script>
-        <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
+    <!-- 방문자 분석기 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141674754-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-          gtag('config', 'UA-141674754-1');
-        </script>
-        <!-- 방문자 분석기 닫기-->
+      gtag('config', 'UA-141674754-1');
+    </script>
+    <!-- 방문자 분석기 닫기-->
 
-        <style type="text/css">
+        <style>
 
             {
                 box-sizing:border-box;
@@ -85,14 +85,12 @@
               font-size: 25px;
               text-align: center;
             }
-            .tabler{
+            .tables{
               border: 1px solid #2E9AFE;
-              width: 780px;
               margin : 10px;
-              text-align: center;
               border-collapse: collapse;
+              text-align: center;
             }
-
         </style>
 
 
@@ -100,7 +98,6 @@
 
 <!--BBBBBBBBBBBBBBBBBBBBBBOOOOOOOOOOOOOOOOOOOOOODDDDDDDDDDDDDDDDDYYYYYYYYYYYYYYY-->
   <body>
-
 
     <!-- 보안 -->
         <script language="JavaScript">
@@ -138,15 +135,15 @@
 
       <!-- 상단 메뉴바 -->
             <ul class="nav-container">
-              <li class="nav-item"> <a href="index.html">Home</a></li>
-              <li class="nav-item"> <a href="action.html">액션</a></li>
-              <li class="nav-item"> <a href="shooting.html">슈팅</a></li>
-              <li class="nav-item"> <a href="defense.html">디펜스</a></li>
-              <li class="nav-item"> <a href="puzzle.html">퍼즐</a></li>
-              <li class="nav-item"> <a href="horror.html">공포</a></li>
-              <li class="nav-item"> <a href="sports.html">스포츠</a></li>
-              <li class="nav-item"> <a href="racing.html">레이싱</a></li>
-              <li class="nav-item"> <a href="rpg.html">RPG</a></li>
+              <li class="nav-item"> <a href="../../index.html">Home</a></li>
+              <li class="nav-item"> <a href="../../action.html">액션</a></li>
+              <li class="nav-item"> <a href="../../shooting.html">슈팅</a></li>
+              <li class="nav-item"> <a href="../../defense.html">디펜스</a></li>
+              <li class="nav-item"> <a href="../../puzzle.html">퍼즐</a></li>
+              <li class="nav-item"> <a href="../../horror.html">공포</a></li>
+              <li class="nav-item"> <a href="../../sports.html">스포츠</a></li>
+              <li class="nav-item"> <a href="../../racing.html">레이싱</a></li>
+              <li class="nav-item"> <a href="../../rpg.html">RPG</a></li>
             </ul>
       <!-- 상단 메뉴바 닫기 -->
 
@@ -154,39 +151,27 @@
       <div id="smallline">
 
 <!-- 구분 -->
-        <div class="gline"> 퍼즐게임 </div>
+        <div class="gline"> 그로우RPG 게임하기 </div>
 <!-- 구분 닫기 -->
 
-        <table border="1" class="tabler">
-          <tr>
-            <td width="260px">
-              <a href="file/puzzle/angrybirdwallbroken.html">
-              <img width="250px" src="file/puzzle/pic/angrybirdwallbroken.png"/></a><br>앵그리버드
-            </td>
-            <td width="260px">
-              <a href="file/puzzle/dragonquest.html">
-              <img width="250px" src="file/puzzle/pic/dragonquest.png"/></a><br>드레곤퀘스트
-            </td>
-            <td width="260px">
-              <a href="file/puzzle/sudoku.html">
-              <img width="250px" src="file/puzzle/pic/sudoku.png"/></a><br>스도쿠 퍼즐
-            </td>
-          </tr>
-          <tr>
-            <td width="260px">
-              <a href="file/puzzle/growrpg.html">
-              <img width="250px" src="file/puzzle/pic/growrpg.png"/></a><br>그로우RPG
-            </td>
-            <td width="260px">
-              <a href="file/puzzle/growilands1.html">
-              <img width="250px" src="file/puzzle/pic/growilands1.png"/></a><br>그로우아일랜드1
-            </td>
-            <td width="260px">
-              <a href="file/puzzle/growilands2.html">
-              <img width="250px" src="file/puzzle/pic/growilands2.png"/></a><br>그로우아일랜드2
-            </td>
-          </tr>
-        </table>
+<!-- 게임 -->
+        <br>
+<embed src="http://www.ko.eyezmaze.com/game/grow_v3_remake.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" width="500" height="405">
+          <br><br>
+<!-- 게임 닫기 -->
+
+<!-- 조작법-->
+       <div class="gline"> 조작법 </div>
+          <table class="tables" border="1px">
+             <tr>
+               <td width="510px"> 마우스 </td>
+
+             </tr>
+             <tr>
+
+
+          </table> <br>
+<!-- 조작법 닫기 -->
 
       </div>
 <!-- 작은선 닫기 -->
